notebook style changed

--- a/synapsoft-2016/synap_quiz_신입.ipynb
+++ b/synapsoft-2016/synap_quiz_신입.ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "채용 퀴즈 - 개발 신입\n",
@@ -126,7 +126,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Time Complexity  |    Graph 생성  |  친구 목록 출력  |  친구의 친구 목록 출력\n",
@@ -138,6 +138,7 @@
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
