notebook style changed

--- a/synapsoft-2016/synap_quiz_신입.ipynb
+++ b/synapsoft-2016/synap_quiz_신입.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "채용 퀴즈 - 개발 신입\n",
     "\n",
@@ -47,7 +51,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "-"
+    }
    },
    "outputs": [],
    "source": [
@@ -127,7 +134,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "Time Complexity  |    Graph 생성  |  친구 목록 출력  |  친구의 친구 목록 출력\n",
     "           big O |      O(E)     |  O(E_of_me)   | O(Σ(E_of_friend))\n",
