notebook style changed

--- a/synapsoft-2016/synap_quiz_신입.ipynb
+++ b/synapsoft-2016/synap_quiz_신입.ipynb
@@ -136,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "skip"
     }
    },
    "source": [
