--- a/synapsoft-2016/synap_quiz_신입.ipynb
+++ b/synapsoft-2016/synap_quiz_신입.ipynb
@@ -1,12 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
    },
+   "outputs": [],
    "source": [
     "채용 퀴즈 - 개발 신입\n",
     "\n",
@@ -140,8 +143,11 @@
     }
    },
    "source": [
-    "Time Complexity  |    Graph 생성  |  친구 목록 출력  |  친구의 친구 목록 출력\n",
-    "           big O |      O(E)     |  O(E_of_me)   | O(Σ(E_of_friend))\n",
+    "Time Complexity \n",
+    "\n",
+    "Graph 생성 : O(E)\n",
+    "친구 목록 출력 : O(E_of_me)\n",
+    "친구의 친구 목록 출력 : O(Σ(E_of_friend))\n",
     "           \n",
     "E = 그래프 총 Edge개수,  E_of_me = 내 친구 수, E_of_friend = 친구의 친구 수"
    ]
