--- a/synapsoft-2016/synap_quiz_경력.ipynb
+++ b/synapsoft-2016/synap_quiz_경력.ipynb
@@ -1,8 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "채용 퀴즈 - 개발 경력\n",
     "\n",
@@ -83,8 +87,12 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "== Test Case ==\n",
     "\n",
@@ -128,8 +136,12 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "Summary\n",
     "\n",
